WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150629
Fix a typo in ProbeContext::fpr().
https://bugs.webkit.org/show_bug.cgi?id=150629
Summary
Fix a typo in ProbeContext::fpr().
Mark Lam
Reported
2015-10-28 10:27:13 PDT
ProbeContext::fpr() should be calling its CPUState::fpr(), not CPUState::gpr().
Attachments
the patch.
(1.44 KB, patch)
2015-10-28 10:29 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
fixed ChangeLog to read a little better.
(1.44 KB, patch)
2015-10-28 10:31 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2015-10-28 10:29:33 PDT
Created
attachment 264227
[details]
the patch.
Mark Lam
Comment 2
2015-10-28 10:31:00 PDT
Created
attachment 264228
[details]
fixed ChangeLog to read a little better.
Yusuke Suzuki
Comment 3
2015-10-28 10:34:21 PDT
Comment on
attachment 264228
[details]
fixed ChangeLog to read a little better. wow, r+!
WebKit Commit Bot
Comment 4
2015-10-28 11:15:19 PDT
Comment on
attachment 264228
[details]
fixed ChangeLog to read a little better. Clearing flags on attachment: 264228 Committed
r191682
: <
http://trac.webkit.org/changeset/191682
>
WebKit Commit Bot
Comment 5
2015-10-28 11:15:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug