Fix a typo in ProbeContext::fpr(). https://bugs.webkit.org/show_bug.cgi?id=150629

Reviewed by Yusuke Suzuki.

ProbeContext::fpr() should be calling CPUState::fpr(), not CPUState::gpr().

* assembler/AbstractMacroAssembler.h:
(JSC::AbstractMacroAssembler::ProbeContext::fpr):


Canonical link: https://commits.webkit.org/168791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191682 268f45cc-cd09-0410-ab3c-d52691b4dbfc